# reflex-firebase

./: .gitignore  README.md  pyproject.toml
custom_components/reflex_firebase/: __init__.py  auth_form.py  auth_state.py  config.py  firebase.py  pyredantic.py
firebase_demo/: requirements.txt  rxconfig.py
firebase_demo/firebase_demo/: firebase_demo.py
